Update 문제 해결 시작하기.md

--- a/Algorithm/종만북/문제 해결 시작하기.md
+++ b/Algorithm/종만북/문제 해결 시작하기.md
@@ -11,10 +11,43 @@
 
 <br><br>
 
-###### 문제를 못 풀었다?
+##### 문제를 못 풀었다?
 ***
 1. 시간을 정해두고 생각해 본다.
 2. 시간이 지나도 문제를 풀지 못하면 다른 사람의 코드를 본다.
 3. 복기를 꼭 하자.
+
+##### 문제 해결 전략
+***
+<ul>
+    <li>직관(딱 보면 풀이가 떠오름)</li>
+    <li>체계적인 접근(떠오르지 않아 순차적으로 풀이 도출)</li>
+    <ol>
+        <li>비슷한 문제</li>
+        <li>단순한 방법 시작</li>
+        <li>문제를 푸는 과정을 수식화</li>
+        <li>문제를 단순화</li>
+        <li>그림 그리기</li>
+        <li>문제를 분해</li>
+        <li>뒤에서부터 생각</li>
+        <li>순서 강제</li>
+        <li>특정 형태의 답(정규화)</li>
+    </ol>
+</ul>
+
+##### 코딩과 디버깅
+***
+<ul>
+    <li>코딩</li>
+    <ol>
+        <li>간결한 코드</li>
+        <li>코드 재사용</li>
+        <li>표준 라이브러리 공부</li>
+        <li>항상 같은 형태</li>
+        <li>이름 명료, 일관 /////////////////여기부터 더 추가해야됨</li>
+    </ol>
+    <li>디버깅</li>
+</ul>
+
 
 
