Update 문제 해결 시작하기.md

--- a/Algorithm/종만북/문제 해결 시작하기.md
+++ b/Algorithm/종만북/문제 해결 시작하기.md
@@ -1,6 +1,6 @@
 ### 알고리즘 공부 기본
 
-##### 문제를 못 풀었다?
+##### 체계적인 문제풀이
 ***
 1. 문제를 읽고 이해한다.
 2. 문제를 익숙한 용어로 재정의한다.
@@ -47,6 +47,7 @@
         <li>이름 명료, 일관 /////////////////여기부터 더 추가해야됨</li>
     </ol>
     <li>디버깅</li>
+    <li>자주하는 실수 ---->  정리하자 </li> 
 </ul>
 
 
