--- a/Algorithm/종만북/단원별정리.md
+++ b/Algorithm/종만북/단원별정리.md
@@ -24,4 +24,18 @@
 
 <br><br>
 
-## 동적
+## 동적 계획법
+***
+<ul>
+    <li>최적화 문제에서 많이 쓰인다.</li>
+    <br>
+    <li>중복되는 부분들을 메모이제이션을 통해서 시간 단축을 하는 방법이다.</li>
+    <br>
+    <li>주의해야할 점</li>
+    <ol>
+        <li>기저 사례를 잘 처리하자</li>
+        <li>초기화 주의</li>
+        <li>최소한의 필요한 정보만 고려하자</li>
+        <li>앞으로 남은 선택들에 대해서 고려</li>
+    </ol>
+</ul>
